--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,67 @@
-.App {
-  text-align: center;
+.app {
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  font-size: 1rem;
+  width:100%;
+  display:flex;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: lightgray;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
+.nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  width: 12rem;
+}
+
+.user-menu {
+  display: flex;
+  justify-content: space-around;
+  padding-right: 2rem;
+  width: 13rem;
+}
+
+.content {
+  text-align: center;
+  display: flex;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+img{
+  border-style: none;
+  height: auto;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.avatar-small{
+  height: 2rem;
+}
+
+.dashboard{
+  width:60%;
+}
+.question-list{
+    border: 1px solid gray;
+    padding: 1rem;
+    margin-top: 1rem;
+}
+.question-list-items{
+  display: flex;
+  justify-content: space-between;
+  
+}
+.question-item{
+  padding: 1rem;
+  border: 1px solid red;
+  width: 15rem;
+}
+.question-button{
+  font-size:1rem;
+  width:100%;
+  padding:.5rem;
+}
+.question-button:hover{
+  cursor: pointer;
 }
