--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
-.app {
+body {
+  font-size: 24px
+}
+
+input[type="submit"] {
+  font-size: 1.5rem;
+  margin-top: .5rem;
+}
+
+input[type="submit"]:hover {
+	cursor: pointer;
+}
+
+input[type="radio"] {
+	margin: .5rem;
 }
 
 .header {
@@ -59,34 +73,39 @@ img{
 }
 
 .question-list{
-    border: 1px solid gray;
     padding: 1rem;
     margin-top: 1rem;
 }
 .question-list-items{
   display: flex;
-  justify-content: space-around;
-  
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 .question-item{
   padding: 1rem;
+  margin: .5rem;
   border: 1px solid gray;
-  width: 15rem;
+  width: 30%;
 }
 .question-button{
   font-size:1rem;
-  width:100%;
+  width:50%;
   padding:.5rem;
 }
 .question-button:hover{
   cursor: pointer;
 }
 
+
 .leaderboard {
+  width: 40%;
+}
+
+.leaderboard table{
   border:1px solid #C0C0C0;
   border-collapse:collapse;
   padding:5px;
-  width: 40%;
+  width: 100%;
 }
 .leaderboard th {
   border:1px solid #C0C0C0;
@@ -110,4 +129,65 @@ img{
   flex-direction: column;
   justify-content: space-around;
   padding-left: 0.5rem;
+}
+
+.question-author {
+  display: flex;
+  justify-content: center;
+}
+.question-answers {
+  text-align: left;
+}
+.question-answers label:hover {
+	cursor: pointer;
+}
+.question-textBox{
+  margin: 1rem;
+  width: 20rem;
+  font-size: 1.5rem;
+}
+
+.toggle {
+	display: flex;
+	margin-bottom: 1rem;
+  justify-content: center;
+}
+
+.toggle input {
+	position: absolute !important;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	border: 0;
+	overflow: hidden;
+}
+
+.toggle label {
+	background-color: #e4e4e4;
+	color: rgba(0, 0, 0, 0.6);
+	font-size: 14px;
+	line-height: 1;
+	text-align: center;
+	padding: 8px 16px;
+	margin-right: -1px;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+	transition: all 0.1s ease-in-out;
+}
+
+.toggle label:hover {
+	cursor: pointer;
+}
+
+.toggle input:checked + label {
+	background-color: #98aae7;
+	box-shadow: none;
+}
+
+.toggle label:first-of-type {
+	border-radius: 4px 0 0 4px;
+}
+
+.toggle label:last-of-type {
+	border-radius: 0 4px 4px 0;
 }
